# hardware-monitor-tui

./: .gitignore  Cargo.toml  README.md
src/: app.rs  event.rs  main.rs  tui.rs  ui.rs
